# tydi-lang

./: .gitignore  Cargo.toml  README.md  cheat_sheet.md  progress.md
CookBook/: compile_all.sh
CookBook/10_tpch_with_sugar/: main.td
CookBook/11_tpch_sql6/: compile.sh  main.td
CookBook/12_tpch_sql3/: main.td
CookBook/13_tpch_sql5/: main.td
CookBook/14_tpch_sql19/: main.td
CookBook/1_HelloWorld/: main.td
CookBook/2_Generative/: main.td
CookBook/3_Template/: main.td
CookBook/4_Abstract_Implement/: main.td
CookBook/4_Reversed_Abstraction/: main.td
CookBook/5_Math/: compile.sh  main.td
CookBook/6_ConstValues/: main.td
CookBook/6_ConstValues_Assert/: main.td
CookBook/7_External_Implement/: main.td
CookBook/8_StrictTypeCheck/: main.td
CookBook/9_tpch/: main.td
derived_macro/: Cargo.toml
derived_macro/src/: lib.rs
playground/: compile.sh
playground/tydi_src/: tydi_ir.td
src/: main.rs
tydi-lang-db/: Cargo.toml
tydi-lang-db-wrapper/: Cargo.toml
tydi-lang-db/src/: database.rs  id.rs  ident.rs  identifier.rs  lib.rs  logical_data_type.rs  project_arch.rs  scope_var.rs  thin_wrapper.rs
tydi-lang-raw-ast/: Cargo.toml
tydi-parser/: Cargo.toml
tydi_compiler/: Cargo.toml
tydi_compiler/src/: main.rs  test_tydi.rs
tydi_compiler/tydi_source/: tydi_ir.td
tydi_lang_front_end/: Cargo.toml
tydi_lang_front_end/src/: drc.rs  lib.rs  std_lib_config.rs  sugaring_connection.rs  test_tydi_ir.rs
tydi_lang_front_end/tydi_source/: tydi_ir.td  tydi_ir2.td  tydi_ir3.td
tydi_lang_parser/: Cargo.toml
tydi_lang_parser/src/: built_in_ids.rs  evaluation.rs  evaluation_impl.rs  evaluation_implement.rs  evaluation_infer.rs  evaluation_streamlet.rs  evaluation_type.rs  evaluation_var.rs  lex_test.rs  lib.rs  parse_project_test.rs  precedence.rs  test_evaluation_simple.rs  test_lex.rs  test_parse_project.rs  tydi_lang_syntax.pest  util.rs
tydi_lang_parser/tydi_source/: implement_eval_0.td  implement_eval_1.td  simple_0.td  simple_1.td  streamlet_eval_0.td  streamlet_eval_1.td  test0.td  test0_err.td  test0_err2.td  test1.td  type_eval_0.td  type_eval_1.td
tydi_lang_raw_ast/: Cargo.toml
tydi_simulator/: Cargo.toml
tydi_simulator/src/: circuit_connection.rs  circuit_frequency.rs  circuit_implement.rs  circuit_port.rs  circuit_representation.rs  circuit_representation_to_dot.rs  err.rs  main.rs  simulator_config_file.rs  test.rs  to_dot.rs  util.rs
tydi_simulator/td_sample/: 1.td  2.td  config_1.json  config_2.json
tydi_src/: tydi_ir.td
(+49 files in other folders)
