[package]
name = "tydi_lang_front_end"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
tydi_lang_raw_ast = { path= "../tydi_lang_raw_ast" }
tydi_lang_parser = { path= "../tydi_lang_parser" }