[package]
name = "tydi_lang_parser"
version = "0.1.0"
description = "Parser for tydi-lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
tydi_lang_raw_ast = { path= "../tydi_lang_raw_ast" }
lazy_static = "1.4.0"
num_cpus = "1.13.1"
threadpool = "1.8.1"
rand = "0.8.5"