[package]
name = "tydi_simulator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tydi_lang_front_end = { path = "../tydi_lang_front_end" }
tydi_lang_raw_ast = { path = "../tydi_lang_raw_ast" }
tydi_lang_parser = { path = "../tydi_lang_parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"